--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,512 +1,147 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 
-* {
-	box-sizing: border-box;
-	margin: 0;
+*{
 	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 body {
-	font-family: "Poppins", sans-serif;
+	font-family: "Poppins", sans-serif;		
 }
-.contener {
+.contener{
+	display: flex;
+}
+.logo{
+	width: 19vw;
+}
+.flex-in-blue{
 	display: flex;
 	justify-content: space-between;
-	max-width: 1353px;
-	height: 1570px;
+	padding: 1.2vw 1.5vw 0 1.5vw;	
 }
-.setengah {
-	width: 50%;
+.flex-in-blue .crime{
+	font-size: 2.6vw;
+	font-weight: 600;
+	color: #fdfdfd;
+	margin-top: 2.1vw;
 }
-.kiri {
+.kiri{
 	background-image: linear-gradient(to bottom right, #5887a5, #242d51);
+	width: 50vw;
 }
-
-.kiri .logo {
-	margin: 20px 0 0 40px;
-	float: left;
+.polisi{
+	display: flex;
+	justify-content: center;
 }
-.kiri .crime {
-	font-size: 36px;
-	font-weight: 600;
-	color: #fdfdfd;
-	float: right;
-	margin: 50px 20px 0 0;
-}
-.kiri .polisi {
-	position: absolute;
-	z-index: 1;
-	margin: 20px 0 0 170px;
-}
-.kiri .moto {
-	font-size: 29px;
-	font-weight: 600px;
-	color: #fdfdfd;
-	margin-left: 20px;
-	width: 80%;
-	word-wrap: break-word;
-}
-
-.kanan {
-	background-color: #fdfdfd;
-}
-.kanan .welcome {
-	font-size: 37px;
-	font-weight: 600;
-	color: #030303;
-	margin: 140px 100px 0;
-	display: inline-block;
-	/* background-color: blue; */
-}
-.kanan .sign {
-	font-size: 37px;
-	font-weight: 600;
-	color: #030303;
-	margin: 135px 260px 0;
-	display: inline-block;
-}
-
-.kanan .text-kecil {
-	font-size: 14px;
-	font-weight: 500;
-	margin: 0px 227px 0;
-	display: inline-block;
-	position: absolute;
-	top: 195px;
-	left: 693px;
+.polisi .police{
+	width: 25vw;
+	margin-top: 10vw;
 	z-index: 2;
-
-	/* background-color: rgb(237, 122, 122); */
 }
-
-.kanan .motif-om {
+.motif{
 	position: absolute;
-	top: 0;
-	right: 0;
-	width: 650px;
-}
-.form-absolute {
-	position: absolute;
+	width: 50vw;
+	margin-top: 10vw;
 	z-index: 1;
-	margin: 20px 0 0 170px;
 }
-input[type="text"],
-input[type="password"] {
-	width: 324px;
-	height: 39px;
-	padding: 10px;
-	border-radius: 10px;
-	border: 2px solid #d3d3d3;
-	background-color: #d3d3d3;
-}
-.email select {
-	width: 324px;
-	height: 2.8rem;
-	padding: 10px;
-	border-radius: 10px;
-	border: 2px solid #d3d3d3;
-	background-color: #d3d3d3;
-}
-.email option {
-	background-color: #fdfdfd;
-}
-.email textarea {
-	width: 324px;
-	height: 7rem;
-	padding: 10px;
-	border-radius: 10px;
-	border: 2px solid #d3d3d3;
-	background-color: #d3d3d3;
-}
-form div {
-	margin-top: 30px;
-	font-size: 15px;
-	font-weight: 500;
-}
-div > label {
-	display: block;
-	margin-bottom: 10px;
-}
-button[type="submit"] {
-	background-color: #030303;
+.moto{
+	margin: 10vw 0;
 	color: #fdfdfd;
-	border: none;
-	width: 183px;
-	height: 48px;
-	font-size: 15px;
-	border-radius: 20px;
-	margin: 60px 0 0 68px;
-	box-shadow: 3px 3px 3px #5e5e5e, -3px -3px 3px #ffffffee;
-}
-.form-error {
-	color: red;
-	text-transform: capitalize;
-}
-
-.pesan-logout {
-	margin: 30px 0 0 25px;
-	text-align: center;
-}
-/* --------------HEADER------------------- */
-
-.lambang {
-	width: 163px;
-}
-
-.navbar-nav .nav-link {
-	font-family: "Poppins", sans-serif;
+	font-size: 3vw;
 	font-weight: 500;
-	font-size: 16px;
-	color: #030303;
-}
-.navbar-toggler {
-	border: 2px solid #030303;
-}
-.filter-right {
-	color: #030303;
-	width: 20px;
-}
-.nav-item .btn {
-	background-color: #030303;
-	color: #fdfdfd;
-	border-radius: 20px;
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-	display: block;
-}
-.nav-item .btn:hover {
-	background-color: #fdfdfd;
-	transition: 700ms;
-	color: #030303;
-	border-radius: 20px;
-	display: block;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.nav-item {
-	margin-top: 10px;
-}
-.nav-link:hover::after {
-	content: "";
-	display: block;
-	border-bottom: 3px solid #5887a5;
-	padding-bottom: 7px;
-	margin-bottom: -10px;
-}
-.jumbotron .display-4 {
-	font-size: 19px;
-	font-weight: 600;
-	line-height: 157%;
-	margin-top: 20px;
+	text-align: left;
+	padding-left: 2vw;
 }
 
-.jumbotron .lead {
-	margin-top: 32px;
-	font-size: 11px;
-	font-weight: 500;
-	line-height: 220%;
-}
-.btn-dark {
-	margin-top: 20px;
-	background-color: #030303;
-	border-radius: 10px;
-	width: 90px;
-	font-size: 9px;
-	font-weight: 500;
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-}
-.jumbotron {
-	background-color: #fdfdfd;
-}
-.jumbotron2 {
-	background-color: #5887a5;
-}
-.container .kapolri {
-	width: 150px;
-	border-radius: 10px;
-	margin: 0px 30%;
-}
-.container .sigit {
-	font-size: 15px;
-	font-weight: 600;
-}
-.container.kapolri {
-	display: none;
-}
-.bg-light {
-	background-color: #fdfdfd;
-}
-.modal-title,
-.modal-body {
-	color: #fdfdfd;
-}
-.modal-content {
-	background-color: #09080d;
-}
-.container .animated {
-	animation: up-down 2s ease-in-out infinite alternate-reverse both;
-}
+/* =============== Mobile =============== */
+@media (max-width: 429px) {
 
-/* lapor */
-.container .pesan {
-	display: inline-block;
-	font-size: 1.5rem;
-	margin: 2rem 0 0 20rem;
-	border-left: 8px solid;
-	border-right: 8px solid;
-	border-radius: 20px 5px;
-}
-
-/* profile */
-.shadow {
-	margin-top: 2rem;
-	padding: 3rem;
-}
-.card-title {
-	margin-bottom: 2rem;
-}
-.foto-profile {
-	margin-top: 1rem;
-}
-* {
-	list-style-type: none;
-}
-
-@keyframes up-down {
-	0% {
-		transform: translateY(10px);
-	}
-	100% {
-		transform: translateY(-10px);
-	}
-}
-
-footer a {
-	color: #030303;
-}
-footer a:hover {
-	color: #5887a5;
-	text-decoration: none;
-}
-footer .cr p {
-	font-size: 10px;
-	margin: 1em 8.5em;
-	display: inline;
-}
-
-/* --------------------------------------------Ukuran Dekstop------------------------------------------- */
-@media (min-width: 992px) {
-	.lambang {
-		width: 172px;
-	}
-	.navbar-nav .nav-link {
-		font-size: 17px;
-	}
-
-	.nav-item .tombol {
-		width: 120px;
-		margin-right: 10px;
-	}
-	.nav-item {
-		margin-left: 90px;
-	}
-	.nav-link:hover::after {
-		content: "";
-		display: block;
-		border-bottom: 3px solid #5887a5;
-		width: 50%;
-		margin: auto;
-		padding-bottom: 5px;
-		margin-bottom: -8px;
-	}
-	.jumbotron {
-		height: 1024px;
-		margin-top: -104px;
-		color: #030303;
-	}
-	.jumbotron .display-4 {
-		font-size: 49px;
-		font-weight: 600;
-		line-height: 157%;
-	}
-
-	.jumbotron .lead {
-		margin-top: 32px;
-		font-size: 16px;
-		font-weight: 500;
-		line-height: 220%;
-	}
-	.jumbotron .container {
-		margin-top: 150px;
-	}
-
-	.btn-dark {
-		margin-top: 20px;
-		background-color: #030303;
-		border-radius: 15px;
-		width: 145px;
-		height: 40px;
-		font-size: 16px;
-		font-weight: 500;
-		box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-	}
-	.navbar-nav {
-		text-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
-	}
-
-	.jumbotron2 {
-		background-color: #5887a5;
-		margin-top: -150px;
-	}
-	.container .sigit {
-		font-size: 30px;
-		font-weight: 600;
-	}
-	.container .kapolri {
-		width: 300px;
-		border-radius: 10px;
-		margin: 0 35%;
-	}
-	.jumbotron .flex {
+	/* ============== Login ============== */
+	.contener{
 		display: flex;
+		flex-direction: column;
 	}
-	.container .kiri-profil {
-		margin: -25px 0 0 0;
-		order: 1;
+	.logo{
+		width: 30vw;
 	}
-	.container .pp-kapolri {
-		order: 2;
-	}
-
-	/* ---------------halaman lapor----------- */
-	.container .title-lapor {
-		text-transform: capitalize;
-		text-align: center;
-	}
-	.title-lapor h1 {
-		font-size: 49px;
-		font-weight: 600;
-	}
-	.title-lapor p {
-		font-size: 16px;
-		font-weight: 500;
-	}
-	.container .title-lapor {
-		margin-top: 8rem;
-	}
-	.profile {
-		text-align: center;
-		margin-bottom: 4rem;
-	}
-	.form-laporan .form-error {
-		display: inline-block;
-		margin: 0 0 0 16.5rem;
-	}
-	.form-laporan input[type="text"],
-	.form-laporan input[type="password"],
-	.form-laporan input[type="file"],
-	.form-laporan select {
-		width: 35rem;
-		height: 2.6rem;
-		padding: 0.5rem;
-		border-radius: 10px;
-		border: 2px solid #d3d3d3;
-		background-color: #d3d3d3;
-	}
-	.form-laporan textarea {
-		width: 35rem;
-		height: 8rem;
-		padding: 0.5rem;
-		border-radius: 10px;
-		border: 2px solid #d3d3d3;
-		background-color: #d3d3d3;
-	}
-
-	.form-laporan input,
-	.form-laporan textarea,
-	.form-laporan select,
-	.form-laporan button {
-		margin: 0 0 0 16.5rem;
-	}
-	.form-laporan button {
-		margin: 0 0 0 27.5rem;
-	}
-	.form-laporan .label-form {
-		display: inline-block;
-		margin: 0 0 1rem 16.5rem;
-	}
-	form .data-pelapor,
-	form .data-terlapor {
-		text-transform: capitalize;
-		font-size: 21px;
-		font-weight: 500;
-		margin: 5em 0 4rem 0;
-	}
-	.button-lapor {
-		margin-left: 15em;
-	}
-	.form-row input,
-	.form-row select,
-	.form-row textarea {
-		background-color: #fdfdfd;
-		border: 1px solid #030303;
-		border-radius: 10px;
-	}
-	.form-row input,
-	.form-row select {
-		width: 23em;
-	}
-	.form-row textarea {
-		width: 51em;
-		height: 9em;
-	}
-	.container.message {
-		border: 1px solid #5887a5;
-	}
-
-	/* -------FOOTER----------------- */
-	footer .flex {
+	.flex-in-blue{
 		display: flex;
 		justify-content: space-between;
+		padding: 1.2vw 2vw 0 2vw;	
 	}
-	footer .about,
-	footer .social {
-		font-size: 18px;
+	.flex-in-blue .crime{
+		font-size: 5.4vw;
+		font-weight: 600;
+		color: #fdfdfd;
+		margin-top: 5vw;
+	}
+	.kiri{
+		background-image: linear-gradient(to bottom right, #5887a5, #242d51);
+		width:100vw;
+	}
+	.polisi{
+		display: flex;
+		justify-content: center;
+	}
+	.polisi .police{
+		width: 50vw;
+		margin-top: 15vw;
+		z-index: 2;
+	}
+	.motif{
+		position: absolute;
+		width: 100vw;
+		margin-top: 15vw;
+		z-index: 1;
+	}
+	.moto{
+		margin: 15vw 0;
+		color: #fdfdfd;
+		font-size: 5vw;
 		font-weight: 500;
+		text-align: center;
+		padding-left: 0;
 	}
-
-	.fa-stack.fa-2x {
-		font-size: 18px;
+	.sambutan{
+		text-align: center;
 	}
-	footer a,
-	footer p {
-		font-size: 14px;
+	.sambutan .welcome{
+		margin-top: 20vw;
+		font-size: 6vw;
+		font-weight: 600;
 	}
-	footer a {
-		text-decoration: none;
+	.sambutan .text-kecil{
+		font-size: 3.7vw;
+		font-weight: 500;
+		margin-top: -2.5vw;
 	}
-	footer li p {
-		display: inline;
+	.form-absolute{
+		margin-top: 18vw;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
-	footer li {
-		margin-top: 10px;
+	.email label, .pw label{
+		font-size: 3.9vw;
+		font-weight: 500;
+		display: block;
+		margin-bottom: 4vw;
 	}
-
-	footer .cr p {
-		font-size: 10px;
-		margin: 0 50em;
-		display: inline;
+	.pw{
+		margin-top: 6vw;
 	}
-	.menu-about,
-	.be-social,
-	.logo-polisi {
-		margin-top: 2rem;
+	.email input[type="text"], .pw input[type="password"]{
+		width: 60vw;
+		height: 11vw;
+		padding:10px;
+		border-radius: 4vw;
+		border: 2px solid #d3d3d3;
+		background-color: #d3d3d3;
 	}
-	.footer-blue {
-		background-color: #5887a5;
-		width: 100%;
-		height: 15em;
-		margin-top: 2rem;
-	}
-	.footer-blue a:hover {
-		color: #fdfdff;
-		text-decoration: none;
+	.form-absolute .btn{
+		margin: 11vw 0;
+		border-radius: 3vw;
+		width: 40vw;
+		text-transform: uppercase;
 	}
 }
