--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,9 @@ body {
 	width: 50vw;
 }
 .motif-om{
-	display: none;
+	width: 50vw;
+	position: absolute;
+	z-index: -1;
 }
 
 /* =============== Mobile =============== */
