--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,15 @@ body {
 	overflow: hidden;
 }
 .logo{
-	width: 19vw;
+	width: 9vw;
 }
 .flex-in-blue{
 	display: flex;
 	justify-content: space-between;
-	padding: 1.2vw 1.5vw 0 1.5vw;	
+	padding: 0.4vw 1.5vw 0 1.5vw;	
 }
 .flex-in-blue .crime{
-	font-size: 2.6vw;
+	font-size: 1.4vw;
 	font-weight: 600;
 	color: #fdfdfd;
 	margin-top: 2.1vw;
@@ -35,20 +35,20 @@ body {
 	justify-content: center;
 }
 .polisi .police{
-	width: 25vw;
-	margin-top: 10vw;
+	width: 10vw;
+	margin-top: 5vw;
 	z-index: 2;
 }
 .motif{
 	position: absolute;
-	width: 50vw;
-	margin-top: 10vw;
+	width: 30vw;
+	margin-top: 3vw;
 	z-index: 1;
 }
 .moto{
 	margin: 10vw 0;
 	color: #fdfdfd;
-	font-size: 3vw;
+	font-size: 2vw;
 	font-weight: 500;
 	text-align: left;
 	padding-left: 2vw;
@@ -57,36 +57,36 @@ body {
 	text-align: center;
 }
 .sambutan .welcome{
-	margin-top: 20vw;
-	font-size: 3.5vw;
+	margin-top: 5vw;
+	font-size: 2vw;
 	font-weight: 600;
 }
 .sambutan .text-kecil{
-	font-size: 1.4vw;
+	font-size: 0.9vw;
 	font-weight: 500;
 	margin-top: -1.5vw;
 }
 .form-absolute{
-	margin-top: 10vw;
+	margin-top: 5vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	z-index: 3;
 }
 .email label, .pw label{
-	font-size: 1.5vw;
+	font-size: 1vw;
 	font-weight: 500;
 	display: block;
-	margin-bottom: 1.5vw;
+	margin-bottom: 1vw;
 }
 .pw{
-	margin-top: 4vw;
+	margin-top: 1.5vw;
 }
 .email input[type="text"], .pw input[type="password"], .email select{
-	width: 30vw;
-	height: 4.5vw;
-	padding:10px;
-	border-radius: 4vw;
+	width: 25vw;
+	height: 3.3vw;
+	padding:1rem;
+	border-radius: 1rem;
 	border: 2px solid #d3d3d3;
 	background-color: #d3d3d3;
 }
@@ -328,7 +328,7 @@ li{
 		justify-content: center;
 	}
 	.polisi .police{
-		width: 50vw;
+		width: 40vw;
 		margin-top: 15vw;
 		z-index: 2;
 	}
