--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,6 +533,55 @@ li{
 		position: absolute;
 		z-index: -1;
 	}
+
+	/* ======================= Regis ======================= */
+	.right__regis{
+		width: 100vw;
+		background-color: #fdfdfd;
+		height: 100vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.form-absolute__regis{
+		margin-top: 4vw;
+	}
+
+	.flex-form{
+		display: flex;
+		width:100vw;
+		justify-content: space-around;
+	}
+
+	.wrapper-form label{
+		font-size: 2vw;
+		font-weight: 600;
+		display: block;
+		margin-bottom: 1.7vw;
+	}
+
+	.wrapper-form input[type="text"], .wrapper-form select, .wrapper-form textarea, .wrapper-form input[type="password"]{
+		width: 35vw;
+		height: 5vw;
+		padding: 0 2vw 0 1vw;
+		border-radius: 10vw;
+		border: 2px solid #5887a5;	
+		background-color: transparent;
+		font-size: 1.5vw;
+	}
+
+	.wrapper-form textarea{
+		width: 85vw;
+		height: 4.5vw;
+	}
+	
+	.form-absolute__regis .btn__regis{
+		margin:4vw 0 0 0;	
+		width: 35vw;
+		height: 5.3vw;
+		font-size: 2.3vw;
+	}
 }
 
 /* =============== Mobile =============== */
@@ -687,13 +736,38 @@ li{
 	}
 
 	/* ===================== Regis ===================== */
-	.email textarea{
-		width: 60vw;
-		height: 30vw;
-		padding:10px;
-		border-radius: 4vw;
-		border: 2px solid #d3d3d3;
-		background-color: #d3d3d3;
+
+	.form-absolute__regis{
+		margin-top: 4vw;
+	}
+	
+	.wrapper-form label{
+		font-size: 3vw;
+		font-weight: 600;
+		display: block;
+		margin-bottom: 1.7vw;
+	}
+
+	.wrapper-form input[type="text"], .wrapper-form select, .wrapper-form textarea, .wrapper-form input[type="password"]{
+		width: 40vw;
+		height: 6.5vw;
+		padding: 0 0 0 2vw;
+		border-radius: 10vw;
+		border: 2px solid #5887a5;	
+		background-color: transparent;
+		font-size: 2vw;
+	}
+
+	.wrapper-form textarea{
+		width: 90vw;
+		height: 6.5vw;
+	}
+
+	.form-absolute__regis .btn__regis{
+		margin:5vw 0 0 0;	
+		width: 40vw;
+		height: 6.7vw;
+		font-size: 2.3vw;
 	}
 
 	/* =============== Header =================== */
