--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,22 +244,29 @@ body {
 }
 
 /* ============== Main Home =================== */
-.jumbotron {
+body .jumbotron{
+	height: 88vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	background-color: #fdfdfd;
+	margin-bottom: 0;
 }
+
 .jumbotron .display-4 {
 	font-size: 3.5vw;
 	font-weight: 600;
 	line-height: 1.5;
-	margin-top: 3.5vw;
 }
+
 .jumbotron .lead {
 	margin-top: 4vw;
 	font-size: 1.4vw;
 	font-weight: 500;
 	line-height: 2.2;
 }
-.btn-dark {
+
+.container .btn-dark {
 	margin-top: 4vw;
 	background-color: #030303;
 	border-radius: 10px;
@@ -269,10 +276,15 @@ body {
 	font-weight: 500;
 	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
-.jumbotron2 {
+
+body .jumbotron2 {
 	background-color: #5887a5;
+	height: 88vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
-.flex{
+.flex-jumbotron{
 	display: flex;
 	flex-direction:row-reverse;
 	justify-content: space-around;
@@ -294,6 +306,10 @@ body {
 	}
 }	
 /* =============== Footer =============== */
+#footer{
+	padding: 3vw 2vw 1vw 2vw;
+}
+
 li{
 	list-style: none;
 }
@@ -374,12 +390,65 @@ li{
 	padding: 1vw 0;
 	margin: 10vw 0;
 	font-size: 1.5vw;
-
+	border-radius: 10vw;
 }
 
 	/* ============== Profile ============== */
-	.shadow{
-		margin: 10vw;
+	.profile{
+		text-align: center;
+		margin-top: 5vw;
+	}
+
+	.profile h1{
+		font-size: 4vw;
+	}
+
+	.wrapper-card__profile{
+		margin-top: 5vw;
+		display: flex;
+		width: 100vw;
+		justify-content: center;
+	}
+
+	.card-profile{
+		width: 40vw;
+		margin-bottom: 7vw;
+		background-color: #fdfdfd;
+		border-radius: 2vw;
+		padding: 2vw;
+		box-shadow:  21px 21px 42px #d7d7d7,
+             -21px -21px 42px #ffffff;
+	}
+
+	.image-profile{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		gap: 1vw;
+	}
+
+	.image-profile img{
+		width: 15vw;
+	}
+
+	.image-profile h3{
+		font-weight: 600;
+		font-size: 2.5vw;
+	}
+
+	.image-profile h4{
+		font-size: 1.8vw;
+	}
+
+	.other-data p{
+		font-size: 1.4vw;
+		margin-top: 1vw;
+	}
+
+	.other-data h5{
+		font-size: 2vw;
+		font-weight: 500;
 	}
 
 	/* ======================= Tampilan Tablet ======================= */
@@ -582,6 +651,175 @@ li{
 		height: 5.3vw;
 		font-size: 2.3vw;
 	}
+
+	/* ======================= Header ======================= */
+
+	.lambang {
+		width: 25vw;
+	}
+
+	.filter-right {
+		color: #030303;
+		width: 7vw;
+	}
+
+	.navbar-nav .nav-link {
+		font-family: "Poppins", sans-serif;
+		font-weight: 500;
+		font-size: 3vw;
+		color: #030303;
+	}
+
+	.nav-item .btn {
+		background-color: #030303;
+		color: #fdfdfd;
+		border-radius: 20px;
+		box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+		display: block;
+	}
+
+	.nav-item .btn:hover {
+		background-color: #fdfdfd;
+		transition: 700ms;
+		color: #030303;
+		border-radius: 20px;
+		display: block;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	}
+
+	.nav-item{
+		margin-top: 3vw;
+	}
+
+	.nav-link:hover::after {
+		content: "";
+		display: block;
+		border-bottom: 3px solid #5887a5;
+		padding-bottom: 7px;
+		margin-bottom: -10px;
+	}
+	/* ======================= Main Home ======================= */
+	body .jumbotron{
+		height: 91vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.jumbotron .display-4 {
+		text-align: center;
+		font-size: 4.5vw;
+		font-weight: 600;
+		line-height: 1.9;
+	}
+
+	.jumbotron .lead {
+		margin-top: 9vw;
+		font-size: 2.8vw;
+		font-weight: 500;
+		line-height: 2;
+		text-align: center;
+	}
+
+	.wrapper-btn{
+		display: flex;
+		justify-content: center;
+	}
+
+	.container .btn-dark {
+		margin-top: 7vw;
+		background-color: #030303;
+		border-radius: 10vw;
+		width: 55vw;
+		padding: 1.7vw 0;
+		font-size: 3vw;
+		font-weight: 500;
+		box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+	}
+
+	body .jumbotron2{
+		height: 150vw;
+	}
+
+	.flex-jumbotron{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.container .kapolri{
+		width: 35vw;
+		border-radius: 10px;
+	}
+
+	.container .animated {
+		animation: up-down 2s ease-in-out infinite alternate-reverse both;
+	}
+	@keyframes up-down {
+		0% {
+			transform: translateY(10px);
+		}
+		100% {
+			transform: translateY(-10px);
+		}
+	}
+
+	.kiri-profil .display-4{
+		font-size: 4.5vw;
+		margin-top: 10vw;
+	}
+
+	.kiri-profil .sigit{
+		font-size: 4vw;
+		font-weight: 600;
+		text-align: center;
+	}
+
+	/* ======================= footer ======================= */
+
+	#footer{
+		padding: 3vw 2vw 1vw 2vw;
+	}
+	
+	.lambang-footer{
+		width: 35vw;
+	}
+	.footer-flex{
+		display: flex;
+		flex-direction: column;
+	}
+	.flex-about .about, .flex-social .social{
+		font-size: 4vw;
+		font-weight: 600;
+		margin-top: 5vw;
+	}
+	.flex-about .fa-2x, .flex-social .fa-2x{
+		font-size: 3vw;
+	}
+	.flex-about .fa-circle, .flex-social .fa-circle{
+		color: #030303;
+	}
+	.flex-about .narahubung, .flex-social .narahubung{
+		display: none;
+	}
+	.flex-ul{
+		display: flex;
+	}
+	.cr p{
+		font-size: 2.5vw;
+		text-align: center;
+		margin: 6vw 0 0 0;
+	}
+
+	/* Lapor */
+	.form-laporan .btn-primary{
+		background-color: #5887a5;
+		width: 35vw;
+		margin: 10vw 0;
+		padding: 1vw 0;
+		font-size: 2.5vw;
+		border-radius: 10vw;
+	}
 }
 
 /* =============== Mobile =============== */
@@ -774,16 +1012,19 @@ li{
 	.lambang {
 		width: 30vw;
 	}
+
 	.filter-right {
 		color: #030303;
 		width: 7.5vw;
 	}
+
 	.navbar-nav .nav-link {
 		font-family: "Poppins", sans-serif;
 		font-weight: 500;
 		font-size: 4vw;
 		color: #030303;
 	}
+
 	.nav-item .btn {
 		background-color: #030303;
 		color: #fdfdfd;
@@ -791,6 +1032,7 @@ li{
 		box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 		display: block;
 	}
+
 	.nav-item .btn:hover {
 		background-color: #fdfdfd;
 		transition: 700ms;
@@ -799,9 +1041,11 @@ li{
 		display: block;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 	}
+	
 	.nav-item{
 		margin-top: 4vw;
 	}
+
 	.nav-link:hover::after {
 		content: "";
 		display: block;
@@ -811,39 +1055,56 @@ li{
 	}
 
 	/* ============== Main Home =================== */
+
+	body .jumbotron{
+		height: 90vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
 	
 	.jumbotron .display-4 {
-		font-size: 4.7vw;
+		text-align: center;
+		font-size: 4.9vw;
 		font-weight: 600;
-		line-height: 1.56;
-		margin-top: 4.6vw;
+		line-height: 1.60;
 	}
+
 	.jumbotron .lead {
-		margin-top: 7.6vw;
-		font-size: 2.7vw;
+		margin-top: 9vw;
+		font-size: 3vw;
 		font-weight: 500;
 		line-height: 2.2;
+		text-align: center;
 	}
-	.btn-dark {
-		margin-top: 5vw;
+
+	.wrapper-btn{
+		display: flex;
+		justify-content: center;
+	}
+
+	.container .btn-dark {
+		margin-top: 7vw;
 		background-color: #030303;
-		border-radius: 10px;
-		width: 25vw;
-		padding: 2.5vw 0;
-		font-size: 2.5vw;
+		border-radius: 10vw;
+		width: 55vw;
+		padding: 2vw 0;
+		font-size: 3.5vw;
 		font-weight: 500;
 		box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 	}
 	
-	.flex{
+	.flex-jumbotron{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 	}
+
 	.container .kapolri{
 		width: 35vw;
 		border-radius: 10px;
 	}
+
 	.container .animated {
 		animation: up-down 2s ease-in-out infinite alternate-reverse both;
 	}
@@ -855,19 +1116,25 @@ li{
 			transform: translateY(-10px);
 		}
 	}
+
 	.kiri-profil .display-4{
 		font-size: 4.5vw;
 		margin-top: 10vw;
 	}
+
 	.kiri-profil .sigit{
 		font-size: 4vw;
 		font-weight: 600;
+		text-align: center;
 	}
 
 	/* =============== Footer =============== */
+	#footer{
+		padding: 3vw 2vw 1vw 2vw;
+	}
 	
 	.lambang-footer{
-		width: 50vw;
+		width: 45vw;
 	}
 	.footer-flex{
 		display: flex;
@@ -876,7 +1143,7 @@ li{
 	.flex-about .about, .flex-social .social{
 		font-size: 5vw;
 		font-weight: 600;
-		margin-top: 10vw;
+		margin-top: 7vw;
 	}
 	.flex-about .fa-2x, .flex-social .fa-2x{
 		font-size: 5vw;
@@ -893,7 +1160,7 @@ li{
 	.cr p{
 		font-size: 3vw;
 		text-align: center;
-		margin: 6vw 0;
+		margin: 6vw 0 0 0;
 	}
 
 	/* ============ Footer Blue ============= */
@@ -946,14 +1213,51 @@ li{
 	}
 	.form-laporan .btn-primary{
 		background-color: #5887a5;
-		width: 30vw;
+		width: 40vw;
 		margin: 10vw 0;
 		padding: 1vw 0;
 		font-size: 4vw;
+		border-radius: 10vw;
 	}
 
 	/* ============== Profile ============== */
-	.shadow{
-		margin: 10vw 0;
+	.profile{
+		margin-top: 10vw;
+	}
+
+	.profile h1{
+		font-size: 5vw;
+	}
+
+	.card-profile{
+		width: 60vw;
+		margin-bottom: 7vw;
+		background-color: #fdfdfd;
+		border-radius: 2vw;
+		padding: 3vw;
+		box-shadow:  21px 21px 42px #d7d7d7,
+             -21px -21px 42px #ffffff;
+	}
+
+	.image-profile{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		gap: 1vw;
+	}
+
+	.image-profile img{
+		width: 16vw;
+	}
+
+	.other-data p{
+		font-size: 2vw;
+		margin-top: 1vw;
+	}
+
+	.other-data h5{
+		font-size: 2.5vw;
+		font-weight: 500;
 	}
 }
